tests/snapshots/yaml_suite_snapshots__yaml_suite_KK5P_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Various combinations of explicit block mappings
  from: "@perlpunk"
  tags: explicit-key mapping sequence
  yaml: "complex1:\n  ? - a\ncomplex2:\n  ? - a\n  : b\ncomplex3:\n  ? - a\n  : >\n    b\ncomplex4:\n  ? >\n    a\n  :\ncomplex5:\n  ? - a\n  : - b\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :complex1\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ\n    =VAL :\n   -MAP\n   =VAL :complex2\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ\n    =VAL :b\n   -MAP\n   =VAL :complex3\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ\n    =VAL >b\\n\n   -MAP\n   =VAL :complex4\n   +MAP\n    =VAL >a\\n\n    =VAL :\n   -MAP\n   =VAL :complex5\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ\n    +SEQ\n     =VAL :b\n    -SEQ\n   -MAP\n  -MAP\n -DOC\n-STR\n"
  dump: "complex1:\n  ? - a\n  :\ncomplex2:\n  ? - a\n  : b\ncomplex3:\n  ? - a\n  : >\n    b\ncomplex4:\n  ? >\n    a\n  :\ncomplex5:\n  ? - a\n  : - b\n"
