tests/snapshots/yaml_suite_snapshots__yaml_suite_KK5P_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Various combinations of explicit block mappings
  from: "@perlpunk"
  tags: explicit-key mapping sequence
  yaml: "complex1:\n  ? - a\ncomplex2:\n  ? - a\n  : b\ncomplex3:\n  ? - a\n  : >\n    b\ncomplex4:\n  ? >\n    a\n  :\ncomplex5:\n  ? - a\n  : - b\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :complex1\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ\n    =VAL :\n   -MAP\n   =VAL :complex2\n   +MAP\n    +SEQ\n     =VAL :a\n    -SEQ…"
  dump: "complex1:\n  ? - a\n  :\ncomplex2:\n  ? - a\n  : b\ncomplex3:\n  ? - a\n  : >\n    b\ncomplex4:\n  ? >\n    a\n  :\ncomplex5:\n  ? - a\n  : - b\n"
