tests/snapshots/yaml_suite_snapshots__yaml_suite_KS4U_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Invalid item after end of flow sequence
  from: "@perlpunk"
  tags: error flow sequence
  fail: true
  yaml: "---\n[\nsequence item\n]\ninvalid item\n"
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :sequence item\n  -SEQ\n"
