tests/snapshots/yaml_suite_snapshots__yaml_suite_KS4U_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Invalid item after end of flow sequence
  tags: error flow sequence
  tree: "+STR\n +DOC ---\n  +SEQ []\n   =VAL :sequence item\n  -SEQ\n"
  yaml: "---\n[\nsequence item\n]\ninvalid item\n"
