tests/snapshots/yaml_suite_snapshots__yaml_suite_KSS4_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Scalars on --- line
  from: "@perlpunk"
  tags: anchor header scalar 1.3-err
  yaml: "--- \"quoted\nstring\"\n--- &node foo\n"
  tree: "+STR\n +DOC ---\n  =VAL \"quoted string\n -DOC\n +DOC ---\n  =VAL &node :foo\n -DOC\n-STR\n"
  json: "\"quoted string\"\n\"foo\"\n"
  dump: "--- \"quoted string\"\n--- &node foo\n...\n"
  emit: "--- \"quoted string\"\n--- &node foo\n"
